--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,8 @@ script:
   - xcodebuild -version
   - xcodebuild -showsdks
   - xcodebuild -list
-  - brew upgrade swiftlint
+  - brew update
+  - brew outdated xctool || brew upgrade swiftlint
   - swiftlint version
 
   # Build Framework in Debug and Run Tests if specified
