--- a/.travis.yml
+++ b/.travis.yml
@@ -25,17 +25,17 @@ script:
   - swiftlint version
 
   # Build Framework in Debug and Run Tests if specified
-  - xcodebuild -project "$PROJECT" -scheme "$SCHEME" -sdk "$SDK" -destination "$DESTINATION" -configuration Debug ONLY_ACTIVE_ARCH=NO build | xcpretty;
-    if [ $RUN_TESTS == "YES" ]; then
+  - if [ $RUN_TESTS == "YES" ]; then
           xcodebuild -project "$PROJECT" -scheme "$UITEST_SCHEME" -sdk "$SDK" -destination "$DESTINATION" -configuration Debug ONLY_ACTIVE_ARCH=NO ENABLE_TESTABILITY=YES   test | xcpretty;
+    else
+    xcodebuild -project "$PROJECT" -scheme "$SCHEME" -sdk "$SDK" -destination "$DESTINATION" -configuration Debug ONLY_ACTIVE_ARCH=NO build | xcpretty;
     fi
 
   # Build Framework in Release and Run Tests if specified
-  
-  - 
-    xcodebuild -project "$PROJECT" -scheme "$SCHEME" -sdk "$SDK" -destination "$DESTINATION" -configuration Release ONLY_ACTIVE_ARCH=NO build | xcpretty;
-    if [ $RUN_TESTS == "YES" ]; then
+  - if [ $RUN_TESTS == "YES" ]; then
         xcodebuild -project "$PROJECT" -scheme "$UITEST_SCHEME" -sdk "$SDK" -destination "$DESTINATION" -configuration Release ONLY_ACTIVE_ARCH=NO ENABLE_TESTABILITY=YES test | xcpretty;
+    else
+        xcodebuild -project "$PROJECT" -scheme "$SCHEME" -sdk "$SDK" -destination "$DESTINATION" -configuration Release ONLY_ACTIVE_ARCH=NO build | xcpretty;
     fi
 
   # Build Example in Debug if specified
